# alert-system

./: .env.example  .gitignore  app.py  expiry_system.sql  expiry_system_pg.sql  flask_mysqldb.py  index.py  migrate_to_postgres.py  pyproject.toml  requirements.txt  seed_neon_db.py  vercel.json  wsgi.py
static/: style.css
templates/: admin_dashboard.html  base.html  bill_invoice.html  billing_history.html  create_staff.html  customer_bills.html  customer_dashboard.html  index.html  login.html  register.html  register_staff.html  staff_billing.html  staff_dashboard.html  store_register.html  superadmin_dashboard.html
