[project]
name = "alert-system"
version = "0.1.0"
description = "Smart Expiry Alert System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0.0",
    "flask-mysqldb>=2.0.0",
    "pymysql>=1.1.0",
    "qrcode>=7.4.2",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "apscheduler>=3.10.4"
]

[tool.uv]
dev-dependencies = []
